--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
     </header>
 
-    <secion class="conainer">
+    <secion class="container">
         <img class="home-img-mx" src="images/1.png" alt="">
         <img src="images/2.png" alt="">
         <img src="images/3.png" alt="">
@@ -62,6 +62,14 @@
         <img src="images/8.png" alt="">
         <img src="images/9.png" alt="">
     </secion>
+
+    <div class="sidebar-close flex justify-center item-center">
+        <img  src="images/sidebar-closed.PNG">
+    </div>
+
+    <div class="sidebar-open flex justify-center item-center">
+        <img class="side-open" src="images/sidebar-opened.PNG">
+    </div>
     
     <script src="script.js"></script>
 </body>
