--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <secion class="container">
-        <img class="home-img-mx" src="images/1.png" alt="">
+        <img class="home-img-mx" src="images/home.png" alt="">
         <img src="images/2.png" alt="">
         <img src="images/3.png" alt="">
         <img src="images/4.png" alt="">
