--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 
     <secion class="container">
         <img class="home-img-mx" src="images/1.png" alt="">
-        <img src="images/2.png" alt="">
-        <img src="images/3.png" alt="">
-        <img src="images/4.png" alt="">
-        <img src="images/5.png" alt="">
-        <img src="images/6.png" alt="">
-        <img src="images/7.png" alt="">
-        <img src="images/8.png" alt="">
-        <img src="images/9.png" alt="">
+        <img src="images/2.PNG" alt="">
+        <img src="images/3.PNG" alt="">
+        <img src="images/4.PNG" alt="">
+        <img src="images/5.PNG" alt="">
+        <img src="images/6.PNG" alt="">
+        <img src="images/7.PNG" alt="">
+        <img src="images/8.PNG" alt="">
+        <img src="images/9.PNG" alt="">
     </secion>
 
     <div class="sidebar-close flex justify-center item-center">
